# Ray-Tracer

./: 3spheres.ppm  CMakeLists.txt  raytracernotes.md  raytracingInAWeekend.md
rayTracerSub/: CMakeLists.txt
rayTracerSub/src/: camera.h  color.h  hittable_list.h  lightCol.h  rtweekend.h  sphere.h
src/: camera.h  color.h  hittable.h  interval.h  lightCol.h  main.cpp  ray.h  simple.cpp  sphere.h  triangle.h  vec3.h
